samples/_failures_safe/1761462161_dfb8de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de659560.c: In function ‘main’:
./samples/SAFE/__tmp_de659560.c:154:5: error: expected expression at end of input
  154 |     graph_add_edge(&
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_de659560.c:154:5: error: too few arguments to function ‘graph_add_edge’
./samples/SAFE/__tmp_de659560.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_de659560.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&
      |     ^~~~~~~~~~~~~~
